--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -17,6 +17,11 @@
         color: #fff;
         text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 
+        @media only screen and (max-width: 600px) {
+            padding: 50px 0;
+
+        }
+
         .title {
             font-size: 48px;
             margin-bottom: 10px;
@@ -60,9 +65,10 @@
                     color: #777;
                     display: flex;
                     align-items: center;
+                    justify-content: center;
 
                     .clockIcon {
-                        margin-left: 5px;
+                        margin-right: 5px;
                     }
                 }
 
