--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -4,7 +4,7 @@
 .homePage {
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow: auto;
 
     .content {
         padding: 30px;
