--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -9,7 +9,7 @@
     .header {
         text-align: center;
         margin-bottom: 40px;
-        background-image: url('/header.jpg');
+        background-image: url('/hero/header.jpg');
         background-size: cover;
         background-position: center;
         padding: 100px 0;
