--- a/src/styles/bottomBar.scss
+++ b/src/styles/bottomBar.scss
@@ -1,19 +1,17 @@
 .bottomBar {
     width: 100%;
     height: 60px;
-    position: fixed;
+    position: sticky;
     padding: 0 10px;
-    bottom: 2%;
+    bottom: 0;
     left: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: relative;
 
     .contact {
         width: 60px;
         height: 60px;
-        background-color: blue;
         border-radius: 50%;
         display: flex;
         align-items: center;
