--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -5,6 +5,11 @@
     width: 100%;
     height: 100%;
     overflow: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 15px;
+    overflow: auto;
 
     .content {
         padding: 30px;
@@ -31,26 +36,24 @@
             span {
                 background-clip: text;
                 color: transparent;
-                background-image: linear-gradient(to right, #3b82f6, #4fd1c5);
+                background-image: linear-gradient(to right, #fd9309, yellow);
             }
 
-            .text {
-                margin: 0 auto;
 
-                p {
-                    font-size: 20px;
-                    line-height: 28px;
-                    color: #4b5563;
-                    margin-bottom: 30px;
-                }
-            }
+        }
+
+        margin: 0 auto;
+
+        p {
+            font-size: 20px;
+            line-height: 28px;
+            color: #4b5563;
+            margin-bottom: 30px;
         }
     }
 
     .slider {
         width: 100%;
-
-
 
         figure {
             height: 400px;
@@ -65,12 +68,70 @@
 
             }
 
-            img {
 
+            img {
                 width: 100%;
                 max-height: 100%;
                 object-fit: contain;
             }
+        }
+    }
+
+    .cartContainer {
+        margin-top: 10px;
+        display: flex;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 5px;
+        flex-wrap: wrap;
+
+        @media only screen and (max-width: 768px) {
+            flex-direction: column;
+
+        }
+
+        .cart {
+            min-height: 200px;
+            flex: 1;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            background: linear-gradient(to right, #fd9309, #b45309);
+            border-radius: 10px;
+            padding: 15px;
+
+            @media only screen and (max-width: 768px) {
+                width: 75%;
+            }
+
+            @media only screen and (max-width: 450px) {
+                width: 95%;
+            }
+
+            .imageContainer {
+                flex: 1;
+                width: 100%;
+                height: 100%;
+
+                img {
+                    object-fit: cover;
+                    border-radius: 10px;
+                    width: 100%;
+                    height: 100%;
+
+                }
+            }
+
+            .title {
+                flex: 1;
+                text-align: center;
+                font-weight: 700;
+                font-size: 22px;
+                line-height: 32px;
+            }
+
         }
     }
 }
