--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -54,25 +54,22 @@
 
     .slider {
         width: 100%;
+        text-align: center;
 
         figure {
-            height: 400px;
+            height: 600px;
 
-            @media only screen and (max-width: 768px) {
-                height: 350px;
-
-            }
-
-            @media only screen and (max-width: 408px) {
-                height: 300px;
+            @media only screen and (max-width: 610px) {
+                height: 90%;
+                max-width: 90%;
 
             }
-
 
             img {
                 width: 100%;
                 max-height: 100%;
                 object-fit: contain;
+                border-radius: 4%;
             }
         }
     }
@@ -93,7 +90,7 @@
         }
 
         .cart {
-            min-height: 200px;
+            height: 200px;
             flex: 1;
             display: flex;
             align-items: center;
