--- a/src/styles/bottomBar.scss
+++ b/src/styles/bottomBar.scss
@@ -1,9 +1,10 @@
 .bottomBar {
     width: 100%;
     height: 60px;
-    position: sticky;
+    background-color: transparent;
+    position: fixed;
     padding: 0 10px;
-    bottom: 0;
+    bottom: 1%;
     left: 0;
     display: flex;
     align-items: center;
@@ -36,8 +37,8 @@
         display: flex;
         flex-direction: column;
         position: absolute;
-        bottom: 0;
-        right: 10px;
+        bottom: 2%;
+        right: 3%;
         width: 80%;
         max-width: 450px;
         height: 30vh;
@@ -45,6 +46,8 @@
         text-align: left;
         overflow: hidden;
         background-color: #f0fdf4;
+
+
 
         .whatsaapHeader {
             display: flex;
@@ -79,6 +82,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                cursor: pointer;
 
                 svg {
                     color: #e2e8f0;
@@ -93,6 +97,19 @@
                 position: relative;
 
                 .message {
+
+
+                    &::before {
+                        content: "";
+                        position: absolute;
+                        bottom: 0px;
+                        left: -12px;
+                        border-width: 10px;
+                        border-style: solid;
+                        border-color: transparent transparent #fff transparent;
+                        transform: rotate(236deg);
+                    }
+
                     min-height: 60px;
                     position: relative;
                     padding: 18px 20px;
