contact page UI 2.0

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -5,8 +5,6 @@
     padding: 20px;
     height: 100%;
 
-
-
     .contactDetails {
         display: flex;
         flex-direction: column;
@@ -20,16 +18,15 @@
         border-radius: 10px;
         height: 100%;
 
-        @media (min-width: 768px) {
-            flex-direction: row;
+        @media (max-width: 768px) {
+            flex-direction: column;
         }
 
         .leftDetails {
-            margin-bottom: 20px;
-            flex: 1;
+            flex: 2;
 
-            h2 {
-                font-size: 24px;
+            h1 {
+                font-size: 28px;
                 margin-bottom: 10px;
             }
 
@@ -49,6 +46,14 @@
                 li {
                     font-size: 18px;
                     margin-bottom: 8px;
+                    display: flex;
+                    gap: 5px;
+                    align-items: center;
+
+                    h3 {
+                        font-size: 20px;
+                        font-weight: 600;
+                    }
 
                     a {
                         color: #007bff;
@@ -58,15 +63,11 @@
         }
 
         .rightMap {
-            flex: 1;
-
-            @media (max-width: 768px) {
-                max-height: 350px;
-            }
+            flex: 3;
 
             iframe {
-                width: 100%;
                 border: 0;
+                border-radius: 5%;
             }
         }
     }
