--- a/src/styles/hello.scss
+++ b/src/styles/hello.scss
@@ -1,8 +1,8 @@
-.hello {
+.wrapper {
     background: rgb(17, 17, 17);
     background: linear-gradient(119deg, rgba(17, 17, 17, 1) 15%, rgba(121, 91, 9, 0.9290091036414566) 85%);
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -10,58 +10,57 @@
     position: relative;
     text-align: center;
     z-index: 999;
+    gap: 20px;
+}
 
+.helloImage {
+    width: 15%;
+    border-radius: 50%;
+    position: absolute;
 
-    h1 {
-        font-size: 50px;
-        font-weight: 800;
-        color: white;
-        position: relative;
-        -webkit-text-stroke: 2px #1c1917;
-
-        // &::before {
-        //     content: "Kuzey Tekel";
-        //     position: absolute;
-        //     top: 0;
-        //     left: 0;
-        //     height: 100%;
-        //     width: 20%;
-        //     color: red;
-        //     -webkit-text-stroke: 0px #1c1917;
-        //     animation: animate 4s linear infinite;
-
-        // }
+    @media only screen and (max-width: 768px) {
+        width: 30%;
     }
 
-    .text {
-        color: #e5e7eb;
-        font-size: 22px;
-
+    @media only screen and (max-width: 450px) {
+        width: 35%;
     }
 
-    img {
-        width: 15%;
-        border-radius: 50%;
-        position: absolute;
+}
 
-        @media only screen and (max-width: 768px) {
-            width: 30%;
-        }
+.top {
+    top: 5%;
+    right: 5%;
+}
 
-        @media only screen and (max-width: 450px) {
-            width: 35%;
-        }
+.bottom {
+    bottom: 5%;
+    left: 5%;
+}
 
+.text {
+    color: #f9fafb;
+    font-size: 22px;
+}
+
+.typing-demo {
+    width: 300px;
+    animation: typing 2s steps(22), blink .5s step-end infinite alternate;
+    white-space: nowrap;
+    overflow: hidden;
+    font-family: monospace;
+    font-size: 40px;
+    color: #fff;
+}
+
+@keyframes typing {
+    from {
+        width: 0
     }
+}
 
-    .top {
-        top: 5%;
-        right: 5%;
+@keyframes blink {
+    80% {
+        border-color: transparent
     }
-
-    .bottom {
-        bottom: 5%;
-        left: 5%;
-    }
-
 }
