--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -29,9 +29,13 @@
             top: 20px;
             height: 100%;
             padding: 8px;
+            background-color: white;
+            box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+            margin-bottom: 5px;
+            border-radius: 5px;
 
             @media only screen and (max-width: 600px) {
-                top: -55px;
+                top: 0px;
 
             }
 
@@ -90,26 +94,32 @@
 
             .content {
                 display: grid;
-                gap: 20px;
-                grid-template-columns: repeat(4, 1fr);
+                gap: 10px;
+                grid-template-columns: repeat(5, 1fr);
                 grid-auto-rows: minmax(180px, auto);
                 grid-auto-flow: dense;
 
                 @media screen and (max-width: 1136px) {
-                    grid-template-columns: repeat(3, 1fr);
+                    grid-template-columns: repeat(4, 1fr);
                 }
 
                 @media screen and (max-width: 1000px) {
-                    grid-template-columns: repeat(2, 1fr);
+                    grid-template-columns: repeat(3, 1fr);
                 }
 
                 @media screen and (max-width: 600px) {
+                    grid-template-columns: repeat(2, 1fr);
+                }
+
+                @media screen and (max-width: 300px) {
                     grid-template-columns: repeat(1, 1fr);
                 }
 
                 .item {
                     text-align: center;
                     padding: 8px;
+                    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+                    border-radius: 10px;
 
                     img {
                         width: 100%;
